# voting-dapp

./: .gitignore  Makefile  README.md
nctl-docker/: docker-compose.yaml
node-proxy/: Proxy.ts  package-lock.json  package.json
node-proxy/.build/: Proxy.js
vote-frontend/: CasperNetwork copy.ts  after.json  package-lock.json  package.json
vote-frontend/3d-party-contract/: deploy-contract.sh  local-net-env  test-net-env
vote-frontend/src/: App.tsx  AppTypes.ts  CasperNetwork copy.ts  CasperNetwork.ts  FinalizeVoting.tsx  Init.tsx  NewProposal.tsx  Proposals.tsx  Settings.ts  Utils.tsx  Vote.tsx  Voting.tsx  Wallet.tsx  Wallet.tsx.bu
voting/: CHANGELOG.md  Cargo.toml  Makefile  Odra.toml  PLAN.md  governor.json  package-lock.json
voting-frontend/src/: GovernorClient.ts  Utils.tsx
voting-js-sdk/: 1st_gov_deploy.json  deploy.json  install_governor_deploy.json  package-lock.json  package.json  propose.json  query.sh  run.sh  tsconfig.json
voting-js-sdk/src/: E2ETest.ts  FungibleTokens.ts  Governor.ts  Query.ts  Types.ts  Utils.ts
voting-js-sdk/wasm/: flipper.wasm  governor.wasm
voting/.builder_casper/: Cargo.toml
voting/.builder_casper/src/: contracts_build.rs  flipper_wasm.rs  governor_wasm.rs
voting/contracts/: Cargo.toml  Makefile
voting/contracts/resources/: governor_schema.json
voting/contracts/src/: deployed_governor.rs  governor.rs  lib.rs  types.rs
voting/query-service/: .env
voting/query-service/src/: dto.rs
voting/resources/: flipper_schema.json  governor_schema.json
voting/src/: flipper.rs  governor.rs  lib.rs
voting/wasm/: governor.wasm
