[package]
name = "voting"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "0.4.0", features = [], default-features = false }
# odra = { path = "../../odra/core", default-features = false }
# odra-modules = { path = "../../odra/modules", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
