[package]
name = "builder"
edition = "2021"
version = "1.0.0"

[workspace]
members = []

[dependencies.odra]
version = "0.4.0"
features = ["casper"]
default-features = false

[dependencies.voting]
path = "/home/mike/dao/voting-project/voting-dapp/voting/"
features = ["casper"]
default-features = false

[[bin]]
path = "src/contracts_build.rs"
name = "contracts_build"
test = false
doctest = false
bench = false
doc = false
edition = "2021"
required-features = []

[[bin]]
path = "src/flipper_wasm.rs"
name = "flipper"
test = false
doctest = false
bench = false
doc = false
edition = "2021"
required-features = []

[[bin]]
path = "src/governor_wasm.rs"
name = "governor"
test = false
doctest = false
bench = false
doc = false
edition = "2021"
required-features = []
