[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "0.4.0", features = [], default-features = false }
# actix-web = "4"
# actix-cors = "0.6.4"
# log = "0.4"

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
casper-livenet = ["odra/casper-livenet"]

# [[bin]]
# name = "vote-client"
# path = "bin/vote_client.rs"
# required-features = ["casper-livenet"]

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["casper-livenet"]

[[bin]]
name = "livenet-scenario"
path = "bin/livenet-scenario.rs"
required-features = ["casper-livenet"]

[[bin]]
name = "query"
path = "bin/query.rs"
required-features = ["casper-livenet"]
