[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "0.4.0", features = [], default-features = false }
# odra = { path = "../../../odra/core", default-features = false }
# odra-modules = { path = "../../../odra/modules", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
casper-livenet = ["odra/casper-livenet"]

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["casper-livenet"]

[[bin]]
name = "livenet-scenario"
path = "bin/livenet-scenario.rs"
required-features = ["casper-livenet"]

[[bin]]
name = "query"
path = "bin/query.rs"
required-features = ["casper-livenet"]
